<resources>
    <string name="app_name">JobJob</string>
    <string name="iniciar">Iniciar</string>
    <string name="registrarse">Registrarse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="iniciar_titulo">Iniciar</string>
    <string name="correo">Correo</string>
    <string name="password">Contraseña</string>
    <string name="registro_title">Registro</string>
    <string name="phone">Telefono</string>
    <string name="title_activity_control">ControlActivity</string>
    <string name="mapa">Mapa</string>
    <string name="configuracion">Configuracion</string>
    <string name="salir">Salir</string>
    <string name="acerca">Acerca</string>
    <string name="conectar">Conectar</string>
    <string name="no_data">no data</string>
    <string name="historial">Historial</string>
    <string name="prueba">El trastorno por consumo de alcohol puede ser leve, moderado o grave, según la cantidad de síntomas que presentes. Entre los signos y síntomas pueden encontrarse los siguientes: Incapacidad para limitar la cantidad de alcohol que consumes Deseo o intentos fallidos de reducir la cantidad de alcohol que consumes Pérdida de mucho tiempo bebiendo u obteniendo el alcohol, o recuperándote de su consumo Deseo fuerte o necesidad de beber alcohol Incumplimiento de obligaciones importantes en el trabajo, la escuela o el hogar debido al consumo reiterado de alcohol Consumo continuo de alcohol incluso cuando sabes que esto causa problemas físicos, sociales o interpersonales Abandono o reducción de actividades sociales o laborales y pasatiempos Consumo de alcohol en situaciones donde no es seguro, como al conducir o nadar Desarrollo de tolerancia al alcohol, de manera que necesitas más cantidad para sentir su efecto o tienes un efecto reducido por la misma cantidad Presencia de síntomas de abstinencia, como náuseas, sudoración y temblores, cuando no bebes, o beber para evitar estos síntomas El trastorno por consumo de alcohol puede incluir períodos de intoxicación por alcohol y síntomas de abstinencia. La intoxicación por alcohol se genera a medida que aumenta la cantidad de alcohol en el torrente sanguíneo. Mayor la concentración de alcohol en sangre, mayor el deterioro en tu organismo. La intoxicación por alcohol causa problemas de conducta y cambios mentales. Estos pueden incluir comportamiento inadecuado, estados de ánimo inestables, alteración de la capacidad de juicio, dificultad para hablar, problemas de atención o memoria y mala coordinación. También puedes tener períodos denominados “apagones”, donde no recuerdas los hechos. Los niveles muy altos de alcohol en sangre pueden provocar un coma o incluso la muerte. La abstinencia al alcohol puede suceder cuando el consumo de alcohol ha sido intenso y prolongado y luego se suspende o reduce considerablemente. Puede suceder en el plazo de varias horas o hasta cuatro o cinco días después. Los signos y síntomas consisten en sudoración, aceleración de los latidos del corazón, temblores en las manos, problemas para dormir, náuseas y vómitos, alucinaciones, inquietud y nerviosismo, ansiedad y, a veces, convulsiones. Los síntomas pueden ser lo suficientemente graves como para afectar tu desempeño en el trabajo o en situaciones sociales. ¿Qué se considera un trago? National Institute on Alcohol Abuse and Alcoholism define un trago normal como cualquiera de los siguientes: 12 onzas (355 mililitros) de cerveza común (aproximadamente 5 por ciento de alcohol) Entre 8 y 9 onzas (de 237 a 266 mililitros) de licor de malta (aproximadamente 7 por ciento de alcohol) 5 onzas (148 mililitros) de vino (aproximadamente 12 por ciento de alcohol) 1.5 onzas (44 mililitros) de licor fuerte con 80 por ciento de graduación alcohólica (aproximadamente 40 por ciento de alcohol) Cuándo debes consultar con un médico Si crees que a veces bebes mucho alcohol, si beber te está causando problemas o si tu familia está preocupada porque bebes, habla con tu médico. Existen otras maneras de pedir ayuda, como hablar con un profesional de salud mental o buscar asistencia en los grupos de apoyo como Alcohólicos Anónimos o grupos de autoayuda similares. La negación del problema es muy común, por lo que quizá no sientas que tienes un problema con el alcohol. Puede que no te des cuenta de cuánto bebes o cuántos problemas en tu vida están vinculados al abuso de alcohol. Escucha a tus familiares, amigos o colegas cuando te digan que analices tus hábitos con el alcohol o que busques ayuda. Reflexiona sobre la posibilidad de hablar con alguien que haya tenido este problema y se haya recuperado. Si tu ser querido necesita ayuda Muchas personas que padecen un trastorno relacionado con el consumo de alcohol dudan en tratarse ya que no reconocen que tienen un problema. La intervención por parte de los seres queridos puede ayudar a algunos a reconocer el problema y aceptar que necesitan ayuda profesional. Si te preocupa alguien que bebe en exceso, pide a un profesional con experiencia en el tratamiento del alcoholismot</string>
    <string name="nombre_cliente">Nombre Cliente:</string>
    <string name="detalles">Detalles</string>
    <string name="trabajo">Trabajo:</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="aceptar">Aceptar</string>
    <string name="stado">Stado:</string>
</resources>