<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mapFragment"
            android:title="@string/mapa" />
        <item
            android:id="@+id/historyFragment"
            android:title="@string/historial" />

    </group>
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/configuracionFragment"
            android:title="@string/configuracion" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/aboutFragment"
            android:title="@string/acerca"/>
        <item
            android:id="@+id/menu_salir"
            android:title="@string/salir" />
    </group>
</menu>