<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label='""'
    app:startDestination="@id/mapFragment">

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.res.jobjob.ui.map.MapFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_map" />
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.res.jobjob.ui.history.HistoryFragment"
        android:label="@string/historial"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/configuracionFragment"
        android:name="com.res.jobjob.ui.configuracion.ConfiguracionFragment"
        android:label="@string/configuracion"
        tools:layout="@layout/fragment_config" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.res.jobjob.ui.about.AboutFragment"
        android:label="@string/acerca"
        tools:layout="@layout/fragment_about" />
</navigation>