<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/titleFragment">
    <fragment
        android:id="@+id/titleFragment"
        android:name="com.res.jobjob.ui.title.TitleFragment"
        android:label="@string/app_name" >
        <action
            android:id="@+id/action_titleFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_titleFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.res.jobjob.ui.login.LoginFragment"
        android:label="@string/iniciar_titulo"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.res.jobjob.ui.register.RegisterFragment"
        android:label="@string/registro_title"
        tools:layout="@layout/fragment_register" />
</navigation>