<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".InformacionActivity">

    <data>

        <variable
            name="servicio"
            type="com.res.jobjob.model.data.Servicio" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


            <TextView
                android:id="@+id/nombre_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin"
                android:text="@string/nombre_cliente"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/trabajo_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin"
                android:text="@string/trabajo"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detalles"
                android:textSize="22sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="@dimen/margin"
                android:padding="@dimen/padding_text_scroll">

                <TextView
                    android:id="@+id/detalles_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </ScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin"
                android:text="@string/ubicacion"
                android:textSize="22sp" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/map_fragment"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="150dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/aceptar_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="@dimen/button_margin"
                    android:text="@string/aceptar" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>